@@ -49,6 +49,8 @@ Ver.5.7-dev (in development)
     IMLibPageNavigation.copyRecordFromNavi
     IMLibPageNavigation.deleteRecordFromNavi
     IMLibPageNavigation.insertRecordFromNavi
+- data-im-widget="popupselector" is introduced. This is similar to popup menu. The selections shows on
+  scrollable panel.
 - [BUG FIX] Fix to add multiple times for target node which has "#" started target description.
 - [BUG FIX] Replace the dataset property to set/get attribute methods for IE10.
 - [BUG FIX] Justify the next line handling in TEXTAREA tagged element for IE9.
